# robot_simulation

./: .gitignore  my_map_save.pgm  my_map_save.yaml  my_map_serial.data  readme  test_save.yaml  test_serial.data
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/d435i/: package.xml  setup.cfg  setup.py
src/d435i/launch/: d435i.launch.py
src/ldlidar_stl_ros2/launch/: stl27l.launch.py
src/ors_robot/: package.xml  setup.cfg  setup.py
src/ors_robot/config/: create3_republisher_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  teleop_twist_joy.yaml  test_save.yaml  twist_mux.yaml
src/ors_robot/launch/: create3_republisher.launch.py  d435i.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  nav.launch.py  online_async.launch.py  openai_scene_description.py  rplidar.launch.py  rsp.launch.py  rsp_sim.launch.py  rviz.launch.py  teleop_joystick.launch.py
src/ors_robot/maps/: my_map_save.pgm  my_map_save.yaml  my_map_serial.data  test_save.pgm
src/ors_robot/meshes/: depth_cam.STL  front_wheel.STL  left_wheel.STL  plate.STL  right_wheel.STL
src/ors_robot/rviz/: create3_lidar_slam.rviz  ors_robot.rviz
src/ors_robot/urdf/: Robot_Base.urdf  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_base.xacro  robot_core.urdf
src/ors_robot/worlds/: new_test.world  test.world  video.world
src/rplidar/: package.xml  setup.cfg  setup.py
src/rplidar/rplidar/: rplidar_node.py
src/slamtec_publisher/: package.xml  setup.cfg  setup.py
(+22 files in other folders)
